@@ -5,6 +5,7 @@
 	* src/files.c (save_poshistory, update_poshistory, check_poshistory,
 	load_poshistory): Differentiate variable name from function names.
 	* src/files.c (load_poshistory): Remove a senseless iteration.
+	* src/files.c (load_poshistory): Condense the reading of a line.
 
 GNU nano 2.5.1 - 2016.01.11
 
